--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,37 @@
 :root {
     --color-primary: #123456;
-    --color-secondary: #FFF;
+    --color-secondary: #fff;
     --azul-royal: #144480;
-    --fundo-card-timer: rgba(20, 68, 128, 0.30);
-    --lils: #B872FF;
-    --linear-botes: linear-gradient(180deg, #B872FF 0%, #144480 100%);
+    --fundo-card-timer: rgba(20, 68, 128, 0.3);
+    --lils: #b872ff;
+    --linear-botes: linear-gradient(180deg, #b872ff 0%, #144480 100%);
 }
 
 [data-contexto="foco"] {
-    --main-bg-color: linear-gradient(180deg, #8B1FF8 0%, #041832 48.44%, #01080E 100%);
+    --main-bg-color: linear-gradient(
+        180deg,
+        #8b1ff8 0%,
+        #041832 48.44%,
+        #01080e 100%
+    );
 }
 
 [data-contexto="descanso-curto"] {
-    --main-bg-color: linear-gradient(180deg, #0F725C 0%, #041832 48.44%, #01080E 100%);
+    --main-bg-color: linear-gradient(
+        180deg,
+        #0f725c 0%,
+        #041832 48.44%,
+        #01080e 100%
+    );
 }
 
 [data-contexto="descanso-longo"] {
-    --main-bg-color: linear-gradient(180deg, #1875E9 0%, #041832 48.44%, #01080E 100%);
+    --main-bg-color: linear-gradient(
+        180deg,
+        #1875e9 0%,
+        #041832 48.44%,
+        #01080e 100%
+    );
 }
 
 * {
@@ -32,13 +47,18 @@ html {
 
 body {
     min-height: 100vh;
-    background: url("/imagens/pattern.png");
+    background: url("/Fokus/imagens/pattern.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Unbounded', cursive;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Unbounded", cursive;
 }
 
 .app__logo-figure {
@@ -164,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 2.8rem 6rem;
     justify-content: center;
     align-items: center;
-    background: #010B15;
+    background: #010b15;
 }
 
 .app__footer-text {
@@ -194,7 +214,8 @@ h1, h2, h3, h4, h5, h6 {
     transition: background 0.25s;
 }
 
-.toggle-switch:before, .toggle-switch:after {
+.toggle-switch:before,
+.toggle-switch:after {
     content: "";
 }
 
